<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference android:key="show_launcher_icon"
        android:summary="@string/show_launcher_icon_summary"
        android:title="@string/show_launcher_icon_title"
        android:defaultValue="true" />

    <CheckBoxPreference android:key="failsafe_mode"
        android:title="@string/failsafe_mode_title"
        android:summary="@string/failsafe_mode_summary"
        android:defaultValue="false" />

    <CheckBoxPreference android:key="compatibility_mode"
        android:title="@string/compatibility_mode_title"
        android:summary="@string/compatibility_mode_summary"
        android:defaultValue="false" />

    <PreferenceCategory
        android:title="@string/advanced_settings_title">

        <CheckBoxPreference android:key="use_layout_fix"
            android:summary="@string/use_layout_fix_summary"
            android:title="@string/use_layout_fix_title"
            android:defaultValue="true" />

        <ListPreference android:key="force_variant"
            android:title="@string/title_force_variant"
            android:summary="@string/automatic"
            android:entries="@array/variants"
            android:defaultValue="" />

	    <PreferenceScreen android:key="hacks"
	        android:title="@string/hacks_title"
	        android:summary="@string/hacks_summary">
	               
	        <CheckBoxPreference android:key="use_hack_boot_completed"
	            android:title="@string/use_hack_boot_completed_title"
	            android:summary="@string/use_hack_boot_completed_summary"
	            android:defaultValue="false" />
	
	        <CheckBoxPreference android:key="use_hack_wake_lock"
	            android:title="@string/use_hack_wake_lock_title"
	            android:summary="@string/use_hack_wake_lock_summary"
	            android:defaultValue="false"
	            android:enabled="@bool/is_sdk_ge_19" />

	        <!--
	        <CheckBoxPreference android:key="use_hack_pm_crash"
	            android:title="@string/use_hack_pm_crash_title"
	            android:summary="@string/use_hack_pm_crash_summary"
	            android:defaultValue="false" />


	        <CheckBoxPreference android:key="use_hack_gms_location"
	            android:title="use_hack_gms_location"
	            android:defaultValue="false" />
	         -->

    	</PreferenceScreen>
   
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/about">
        
        <Preference android:key="version"
            android:enabled="false" />
        
        <Preference android:key="build_bugreport"
            android:title="@string/build_bugreport_title"
            android:summary="@string/build_bugreport_summary" />
        
    </PreferenceCategory>
    
</PreferenceScreen>
