<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dip" >

    <TextView android:id="@+id/info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearance"
        android:text="@string/xposed_not_installed"
    />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dip"
        android:gravity="center"
        style="?android:attr/buttonBarStyle"
    >

	    <Button android:id="@+id/btn_help"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="48dip"
	        android:text="@string/btn_help"
	        style="?android:attr/buttonBarButtonStyle"
	    />

	    <Button android:id="@+id/btn_launch"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="48dip"
	        android:text="@string/btn_launch"
	        style="?android:attr/buttonBarButtonStyle"
	    />
    </LinearLayout>

</LinearLayout>
